<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    android:orientation="vertical"
    tools:context="com.example.android.music1app.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/Toolbar"
        app:popupTheme="@style/AppTheme" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_title"
                style="@style/AppTitle"
                android:layout_width="124dp"
                android:layout_gravity="center" />
            <RelativeLayout
                android:id="@+id/artist"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/artistColor">
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/artist" />
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/arrows" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/genres"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/genresColor">
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/genres" />
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/arrows" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/songs"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/songColor">
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/all_songs" />
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/arrows" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/shuffle"
                style="@style/CategoryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/shuffleColor">
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/shuffle" />
                <TextView
                    style="@style/TextView"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/arrows" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
